changing Integer Boolean and Float constructors